# BasketballVision

./: .gitignore  CI_FIX_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: jobs.yml  main.yml  push-pr.yml
src/: main.py
src/drawers/: __init__.py  ball_tracks_drawer.py  player_tracks_drawer.py  utils.py
src/stubs/: .gitkeep
src/team_assigner/: team_assigner.py
src/trackers/: __init__.py  ball_tracker.py  player_tracker.py
src/training_notebooks/: basketball_ball_training.ipynb  basketball_player_detection_training.ipynb
src/utils/: __init__.py  bbox_utils.py  stubs_utils.py  video_utils.py
src/videos/input/: .gitkeep
tests/: conftest.py  test_ball_tracker.py  test_ball_tracks_drawer.py  test_basic.py  test_bbox_utils.py  test_player_tracker.py  test_player_tracks_drawer.py  test_structure.py  test_stubs_utils.py  test_video_utils.py
training_notebooks/: basketball_court_keypoint_training.ipynb
