[project]
name = "basketballvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=15.0.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numba>=0.61.2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "supervision>=0.26.1",
    "torchcodec>=0.6.0",
    "transformers>=4.57.0",
    "ultralytics>=8.3.179",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
